# SQLEquiv

./: .gitignore  Readme.md  demo.ipynb
sql_equivalence/: MANIFEST.in  README.md  __init__.py  analyzer.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
sql_equivalence/equivalence/: __init__.py  algebraic_equivalence.py  base.py  embedding_similarity.py  graph_equivalence.py
sql_equivalence/examples/: README.md  __init__.py  advanced_examples.py  basic_examples.py  demo.py  quick_start.py
sql_equivalence/operators/: __init__.py  aggregate_functions.py  base_operator.py  relational_operators.py  scalar_functions.py  set_operators.py  window_functions.py
sql_equivalence/parser/: __init__.py  ast_builder.py  normalizer.py  sql_parser.py
sql_equivalence/representations/: __init__.py  base.py
sql_equivalence/representations/algebraic/: __init__.py  expression_tree.py  operators.py  relational_algebra.py
sql_equivalence/representations/embedding/: __init__.py  encoder.py  graph_embedding.py  node_embedding.py
sql_equivalence/representations/graph/: __init__.py  lqt.py  query_graph.py
sql_equivalence/transformations/: __init__.py  algebraic_rules.py  graph_transformations.py  optimization_rules.py
sql_equivalence/utils/: __init__.py  algebra_utils.py  graph_utils.py  sql_utils.py  visualization.py
