[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-equivalence"
dynamic = ["version"]

description = "A comprehensive library for analyzing SQL query equivalence"
readme = "README.md" 
requires-python = ">=3.8"
authors = [
    { name = "Yifan Yang", email = "yifan.yang@transwarp.io" }
]

[tool.setuptools_scm]
write_to = "sql_equivalence/_version.py"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=sql_equivalence --cov-report=html --cov-report=term"